tests/fixtures/invalid/pow_none_set_none.py
# Cannot call pow() with None, Set[int], None
x = pow(None, {1, 2, 3}, None)
